samples/_failures_safe/1761797300_ef5341_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9068a6d.c: In function ‘main’:
./samples/SAFE/__tmp_a9068a6d.c:140:9: error: expected expression at end of input
  140 |         if (decompressed.data != NULL && decompressed.size >
      |         ^~
./samples/SAFE/__tmp_a9068a6d.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9068a6d.c:140:9: error: expected declaration or statement at end of input
